# power-plant-rl

./: .gitignore  pyproject.toml  requirements.txt
config/asset_configs/: power_plant_config.yaml
config/asset_parameterization/: asset.yaml
config/model_config/: power_2_factor_model_config.json
config/model_configs/: coal_2_factor_model_config.json  power_2_factor_model_config.json  spread_model.json
src/: base_config.py  constants.py  market_model.py  math_helpers.py  plot_helpers.py
src/delta/: delta_calculator.py
src/delta/min_var_delta/: min_var_delta.py  ops_plot_min_var_delta.py
src/delta_position/: delta_base.py  delta_calculator.py  delta_position.py  delta_position_result.py
src/delta_position/min_var_delta/: min_var_delta.py  ops_plot_min_var_delta.py
src/forward_curve/: forward_curve.py
src/hedging/: forward_product.py  hedge_calculator.py  hedging.py  min_var_hedge.py  ops_plot_min_var_hedge.py  run_min_var_hedge.ipynb  run_min_var_hedge.py
src/market_simulation/: constants.py  market_helpers.py  spread_model.py  two_factor_model.py
src/market_simulation/spread_model/: spread_model.py  spread_model_config.py
src/market_simulation/two_factor_model/: simulation_caching.py  (+2 more)
src/pnl/: hedge_pnl.py  ops_plot_hedge_pnl.py  run_hedge_pnl.ipynb  run_hedge_pnl.py
src/regression/: min_var_regression.py  polynomial_base_builder.py  polynomial_regressor.py  regression_helpers.py
src/valuation/: operational_control.py  operations_states.py
tests/: test_helpers.py  test_market_model.py
tests/forward_curve/: test_forward_curve.py
(+22 files in other folders)
